# hello_rust

./: .gitmodules  Cargo.toml  Justfile  README.md  default.nix  shell.nix
async-inmemory-decompression/: Cargo.toml
async-inmemory-decompression/src/: main.rs
ci/: docker-compose.yml
fibunacci/: Cargo.toml
fibunacci/src/: main.rs
futures_stream_select_ok/: Cargo.toml
futures_stream_select_ok/src/: main.rs
hello_file/: Cargo.toml
hello_file/src/: main.rs
hello_multidim/: Cargo.toml
hello_multidim/src/: main.rs
hello_trait/: Cargo.toml
hello_trait/src/: main.rs
hello_world/: Cargo.toml
hello_world/src/: main.rs
investigate_actix-web_blocking_behavior/: Cargo.toml  output
investigate_actix-web_blocking_behavior/src/: main.rs
iter_take_count/: Cargo.toml
iter_take_count/src/: main.rs
iter_zip_collection_size_differs/: Cargo.toml
iter_zip_collection_size_differs/src/: main.rs
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2017-10-31-201112_create_payments/: down.sql  up.sql
mutating_futures/: Cargo.toml
mutating_futures/src/: lib.rs  minimal.rs  plugins.rs  wrapped.rs  wrapped_enum.rs
prometheus-histogram-value/: Cargo.toml
prometheus-histogram-value/src/: main.rs
src/: db.rs  lib.rs  main.rs  models.rs  schema.rs
static_refs/: Cargo.toml
static_refs/src/: main.rs
stream_claps_args/: Cargo.toml
stream_claps_args/src/: main.rs
tests/: integration.rs
tests/assets/: invoice_1.txt  invoice_2.txt  invoice_3.txt  invoice_4.txt  invoice_5.txt  invoice_6.txt  payments_1.txt
types/: Cargo.toml
types/newtype/: Cargo.toml
types/newtype/src/: lib.rs
types/src/: main.rs
wrapped_failure/: Cargo.toml
wrapped_failure/src/: main.rs
