[package]
name = "invsearch"
version = "0.1.0"
authors = ["Stefan Junker <mail@stefanjunker.de>"]

[dependencies]
assert_cli = "*"
libc = "*"
nom = { version = "*" } #, features = ["nightly"] }
log = "*"
env_logger = "*"
futures = "*"
hyper = "*"

diesel = { version = "*", features = ["postgres"] }
diesel_codegen = { version = "*", features = ["postgres"] }

edit-distance = "^1.0.0"