[package]
name = "async-inmemory-decompression"
version = "0.1.0"
authors = ["Stefan Junker <mail@stefanjunker.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.5"
async-stream = "0.2"
async-tar = "0.1"
anyhow = "1"
async-compression = { version = "^0.3.0", features = [ "stream", "futures-bufread", "gzip"] }
tokio = { version = "0.2", features = ["full"] }
