[package]
name = "investigate_actix-web_blocking_behavior"
version = "0.1.0"
authors = ["Stefan Junker <mail@stefanjunker.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^1.0.3"
reqwest = "^0.9.18"
futures = "^0.1"
tokio = "^0.1"